--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "browser-sync": "^3.0.3",
     "concurrently": "^9.0.1",
-    "cpy-cli": "^5.0.0"
+    "cpy-cli": "^5.0.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-vue": "^9.29.1",
+    "globals": "^15.11.0",
+    "typescript-eslint": "^8.11.0"
   }
 }
